package com.example.myapplicationprojectpart1;

public enum CarType {
    compact,intermediate,SUV
}
