package com.example.myapplicationprojectpart1;

public enum Identity {
    customer,employee,administrator
}
