package com.example.myapplicationprojectpart1;

public enum LicenseType {
    G1,G2,G
}
