package com.example.myapplicationprojectpart1;

public enum RequestStatus {
    NOT_SUBMIT,SUBMITTED,APPROVED,REJECTED
}
