package com.example.myapplicationprojectpart1;

public enum ServiceType {
    CREATE_SERVICE, UPDATE_SERVICE
}
